# mdict

./: .gitignore  Cargo.toml
src/: main.rs
