[package]
name = "mdict"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adler32 = "1.2.0"
serde-xml-rs = "^0.6"
serde = { version = "^1.0", features = ["derive"] }
flate2 = "1.0"
log = "^0.4"
env_logger = "^0.9"
chrono = "^0.4"
ripemd128 = "^0.1"
base64 = "^0.21"